# pbi-report-builder

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  bugs.md  pyproject.toml
docs/: agent-workflows-v2.md  agent-workflows.md  architecture-audit-recommendations.md  bookmarks.md  capabilities.md  catalog-spec.md  cheatsheet.md  data.md  design-guidelines.md  fixtures.md  gap-analysis-existing-pbip-workflow.md  interactions.md  model.md  pages.md  pbi-cli-reference.md  properties.md  render.md  report-building-roadmap.md  report.md  roadmap.md  themes.md  usability-review.md  validation.md  visuals.md
issues/: next-backlog.md
notes/: apply-session-migration.md
scripts/: benchmark_buffered_apply.py  benchmark_export_map_mutations.py  compare_perf_pre_post.sh  extract_tmdl_trace.py  extract_visual_capabilities.js  generate_fixture_build_checklists.py  generate_fixture_datasets.py  inspect_tmdl_trace.py  inspect_visual_capability_trace.js  run_perf_smoke.sh  validate_yaml_examples.py
tests/: apply_parity_support.py  apply_session_fakes.py  cli_regressions_support.py  test_apply_buffered_parity.py  test_apply_plan_bookmarks.py  test_apply_plan_report.py  test_apply_plan_theme.py  test_apply_rollback_journal.py  test_apply_schema_grounding.py  test_apply_session.py  test_capabilities.py  test_catalog.py  test_cli_apply_regressions.py  test_cli_formatting_regressions.py  test_cli_issue_regressions.py  test_cli_layout_regressions.py  test_cli_model_regressions.py  test_cli_navigation_regressions.py  test_cli_regressions.py  test_cli_schema_grounding.py  test_fields.py  (+34 more)
(+509 files in other folders)
