[project]
name = "pbi-report-builder"
version = "0.3.2"
description = "CLI tool for editing Power BI PBIP project files"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
pbi = "pbi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbi"]
